--- a/test/monthly.html
+++ b/test/monthly.html
@@ -10,12 +10,11 @@
     <img id="topImage" src="logo.png" alt="Top Image">
 
     <button id="loginBtn" class="login-btn">관리자</button>
-    <!-- <button id="bottomLeftBtn" class="bottom-left-btn" link="monthly.html">Monthly</button> -->
-    <a href="monthly.html" class="bottom-left-btn" id="bottomLeftBtn">Monthly</a>
+    <a href="index.html" class="bottom-left-btn" id="bottomLeftBtn">Daily</a>
 
     
     <div class="container">
-        <h1 id="Title">Daily reward!</h1>
+        <h1 id="Title">Monthly reward!</h1>
         <div id="slotWrapper" class="card">
             <div id="slot">
               <!-- 항목들이 자동으로 생성됩니다 -->
@@ -31,7 +30,7 @@
         </div>
 
 
-      <script src="index.js"></script>
-      <script src="login.js"></script>
+      <script src="monthly.js"></script>
+      <script src="monthlyLogin.js"></script>
 </body>
 </html>
