--- a/test/monthlyAdmin.html
+++ b/test/monthlyAdmin.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="admin.css" />
+    <title>DLS 실력의힘 간식뽑기 프로그램</title>
+    <link rel="stylesheet" href="./admin.css" />
 </head>
 <body>
-    <button id="loginBtn" class="btn" onclick="location.href='monthly.html'">돌아가기</button>
+    <button id="loginBtn" class="btn" onclick="location.href='./monthly.html'">돌아가기</button>
     
 
     <h1>🎯 Monthly 품목 및 가중치 관리</h1>
