--- a/test/monthly.html
+++ b/test/monthly.html
@@ -10,7 +10,7 @@
     <img id="topImage" src="./logo.png" alt="Top Image">
 
     <button id="loginBtn" class="btn admin">관리자</button>
-    <a href="./index.html" id="bottomLeftBtn" class="btn change">Monthly</a>
+    <a href="./index.html" id="bottomLeftBtn" class="btn change">Daily</a>
     <button id="fullscreenBtn" class="btn full">전체화면</button>
 
 
