--- a/assets/html/monthly.html
+++ b/assets/html/monthly.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DLS 실력의힘 간식뽑기 프로그램</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
-    <img id="topImage" src="./logo.png" alt="Top Image">
+    <img id="topImage" src="../../images/logo.png" alt="Top Image">
 
     <button id="loginBtn" class="btn admin">관리자</button>
-    <a href="./index.html" id="bottomLeftBtn" class="btn change">Daily</a>
+    <a href="../../index.html" id="bottomLeftBtn" class="btn change">Daily</a>
     <button id="fullscreenBtn" class="btn full">전체화면</button>
 
 
@@ -32,7 +32,7 @@
         </div>
 
 
-      <script src="./monthly.js"></script>
-      <script src="./monthlyLogin.js"></script>
+      <script src="../js/monthly.js"></script>
+      <script src="../js/monthlyLogin.js"></script>
 </body>
 </html>
