Design fixes, history button & menu created

--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
 
         <button id="startBtn" class="start-btn">뽑기 시작!</button>
         
-        <h2>최근 뽑기 기록</h2>
-        <div id="historyWrapper">
+        <!-- 기록 열기 버튼 -->
+        <button id="showHistoryBtn" class="start-btn">기록 보기</button>
+
+        <!-- 뽑기 기록 팝업 -->
+        <div id="historyModal" class="modal hidden">
+          <div class="modal-content">
+            <h2>📜 최근 뽑기 기록</h2>
             <ul id="history" class="history-list"></ul>
+            <button id="closeHistoryBtn" class="btn">닫기</button>
+          </div>
         </div>
 
 
