--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DLS 실력의힘 간식뽑기 프로그램</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#4A90E2">
+
 </head>
 <body>
     <img id="topImage" src="images/logo.png" alt="Top Image">
