--- a/assets/html/monthly.html
+++ b/assets/html/monthly.html
@@ -6,8 +6,7 @@
     <title>DLS 실력의힘 간식뽑기 프로그램</title>
     <link rel="stylesheet" href="../css/style.css" />
 </head>
-<body>
-    <img id="topImage" src="../../images/logo.png" alt="Top Image">
+<body class="monthly">
 
     <a href="../../index.html" id="bottomLeftBtn" class="btn change">Daily</a>
     <button id="fullscreenBtn" class="btn full">전체화면</button>
@@ -15,7 +14,7 @@
 
     
     <div class="container">
-        <h1 id="Title">Monthly reward!</h1>
+        <!-- <h1 id="Title">Monthly reward!</h1> -->
         <div id="slotWrapper" class="card">
             <div id="slot">
               <!-- 항목들이 자동으로 생성됩니다 -->
@@ -23,10 +22,12 @@
           </div>
 
 
-        <button id="startBtn" class="start-btn">뽑기 시작!</button>
+          <button id="startBtn" class="start-btn">
+            <img src="../../images/start_btn.png" alt="뽑기 시작" />
+          </button>
         
         <!-- 기록 열기 버튼 -->
-        <button id="showHistoryBtn" class="start-btn">기록 보기</button>
+        <button id="showHistoryBtn" class="btn history">기록 보기</button>
 
         <!-- 뽑기 기록 팝업 -->
         <div id="historyModal" class="modal hidden">
