--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 </head>
 <body class="index">
+  <!-- <img src="images/daily_bg.gif" alt="배경" class="fullscreen-bg"> -->
+
     <a href="assets/html/monthly.html" id="bottomLeftBtn" class="btn change">Monthly</a>
     <button id="fullscreenBtn" class="btn full">전체화면</button>
 
