--- a/assets/html/monthly.html
+++ b/assets/html/monthly.html
@@ -8,6 +8,11 @@
 </head>
 <body class="monthly">
 
+  <video autoplay muted loop playsinline id="bgVideo">
+    <source src="../../images/monthly_bg.mp4" type="video/mp4">
+    브라우저가 video 태그를 지원하지 않습니다.
+  </video>
+
     <a href="../../index.html" id="bottomLeftBtn" class="btn change">Daily</a>
     <button id="fullscreenBtn" class="btn full">전체화면</button>
 
