--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 </head>
 <body class="index">
-  <!-- <img src="images/daily_bg.gif" alt="배경" class="fullscreen-bg"> -->
+  
+  <video autoplay muted loop playsinline id="bgVideo">
+    <source src="images/daily_bg.mp4" type="video/mp4">
+    브라우저가 video 태그를 지원하지 않습니다.
+  </video>
 
     <a href="assets/html/monthly.html" id="bottomLeftBtn" class="btn change">Monthly</a>
     <button id="fullscreenBtn" class="btn full">전체화면</button>
