add review page

--- a/assets/html/monthly.html
+++ b/assets/html/monthly.html
@@ -14,6 +14,7 @@
   </video>
 
     <a href="../../index.html" id="bottomLeftBtn" class="btn change">Daily</a>
+    <a href="review.html" id="bottomLeftBtn" class="btn review">Review</a>
     <button id="fullscreenBtn" class="btn full">전체화면</button>
 
 
