--- a/assets/html/review.html
+++ b/assets/html/review.html
@@ -4,26 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DLS 실력의힘 간식뽑기 프로그램</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#4A90E2">
-
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
-<body class="index">
-  
+<body class="monthly">
+
   <video autoplay muted loop playsinline id="bgVideo">
-    <source src="images/daily_bg.mp4" type="video/mp4">
+    <source src="../../images/monthly_bg.mp4" type="video/mp4">
     브라우저가 video 태그를 지원하지 않습니다.
   </video>
 
-    <a href="assets/html/monthly.html" id="bottomLeftBtn" class="btn change">Monthly</a>
-    <a href="assets/html/review.html" id="bottomLeftBtn" class="btn review">Review</a>
+    <a href="../../index.html" id="bottomLeftBtn" class="btn change">Daily</a>
+    <a href="monthly.html" id="bottomLeftBtn" class="btn review">Monthly</a>
     <button id="fullscreenBtn" class="btn full">전체화면</button>
 
 
     
     <div class="container">
-        <!-- <h1 id="Title">Daily reward!</h1> -->
+        <!-- <h1 id="Title">Monthly reward!</h1> -->
         <div id="slotWrapper" class="card">
             <div id="slot">
               <!-- 항목들이 자동으로 생성됩니다 -->
@@ -31,9 +28,9 @@
           </div>
 
 
-        <button id="startBtn" class="start-btn">
-          <img src="images/start_btn.png" alt="뽑기 시작" />
-        </button>
+          <button id="startBtn" class="start-btn">
+            <img src="../../images/start_btn.png" alt="뽑기 시작" />
+          </button>
         
         <!-- 기록 열기 버튼 -->
         <button id="showHistoryBtn" class="btn history">기록 보기</button>
@@ -42,12 +39,12 @@
         <div id="historyModal" class="modal hidden">
           <div class="modal-content">
             <h2>📜 최근 뽑기 기록</h2>
-            <ul id="history" class="history-list"></ul>
+            <ul id="history2" class="history-list"></ul>
             <button id="closeHistoryBtn" class="btn">닫기</button>
           </div>
         </div>
 
 
-      <script src="assets/js/index.js"></script>
+      <script src="../js/review.js"></script>
 </body>
 </html>
