changed history modal

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <div id="historyModal" class="modal hidden">
           <div class="modal-content">
             <h2>📜 최근 뽑기 기록</h2>
-            <ul id="history" class="history-list"></ul>
+            <div class="history-scroll">
+              <ul id="history" class="history-list"></ul>
+            </div>
             <button id="closeHistoryBtn" class="btn">닫기</button>
           </div>
         </div>
