--- a/assets/html/review.html
+++ b/assets/html/review.html
@@ -6,12 +6,13 @@
     <title>DLS 실력의힘 간식뽑기 프로그램</title>
     <link rel="stylesheet" href="../css/style.css" />
 </head>
-<body class="monthly">
+<body class="review">
 
-  <video autoplay muted loop playsinline id="bgVideo">
+  <!-- <video autoplay muted loop playsinline id="bgVideo">
     <source src="../../images/monthly_bg.mp4" type="video/mp4">
     브라우저가 video 태그를 지원하지 않습니다.
-  </video>
+  </video> -->
+
 
     <a href="../../index.html" id="bottomLeftBtn" class="btn change">Daily</a>
     <a href="monthly.html" id="bottomLeftBtn" class="btn review">Monthly</a>
