--- a/assets/html/review.html
+++ b/assets/html/review.html
@@ -47,6 +47,6 @@
         </div>
 
 
-      <script src="../js/review2.js"></script>
+      <script src="../js/review.js"></script>
 </body>
 </html>
